# lab2

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp
domino/: CMakeLists.txt  domino.cpp  domino.h
